feat: implement Spotify auth with better-auth and token refresh

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 DATABASE_URL="your database connection string here"
+SPOTIFY_CLIENT_ID="your spotify client id here"
+SPOTIFY_CLIENT_SECRET="your spotify client secret here"
+BETTER_AUTH_SECRET="your better auth secret here"
 NEXT_PUBLIC_APP_URL="your better auth url here"
