--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "next dev -H 127.0.0.1",
 		"build": "prisma generate && prisma migrate deploy && next build",
 		"start": "next start",
 		"lint": "biome lint .",
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"@prisma/adapter-pg": "^7.0.0",
 		"@prisma/client": "^7.0.0",
+		"better-auth": "^1.4.1",
 		"next": "16.0.4",
 		"pg": "^8.16.3",
 		"react": "19.2.0",
