chore: update .env.example variable names

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ DATABASE_URL="your database connection string here"
 SPOTIFY_CLIENT_ID="your spotify client id here"
 SPOTIFY_CLIENT_SECRET="your spotify client secret here"
 BETTER_AUTH_SECRET="your better auth secret here"
-NEXT_PUBLIC_APP_URL="your better auth url here"
+BETTER_AUTH_URL="your better auth url here"
