--- a/package.json
+++ b/package.json
@@ -18,27 +18,30 @@
 	},
 	"lint-staged": {
 		"**/*.{ts,tsx,js,jsx}": [
+			"biome format --write",
 			"biome check --write --no-errors-on-unmatched --diagnostic-level=error"
 		]
 	},
 	"dependencies": {
-		"@prisma/adapter-pg": "^7.0.0",
-		"@prisma/client": "^7.0.0",
-		"better-auth": "^1.4.1",
-		"next": "16.0.4",
+		"@prisma/adapter-pg": "^7.1.0",
+		"@prisma/client": "^7.1.0",
+		"better-auth": "^1.4.5",
+		"date-fns": "^4.1.0",
+		"date-fns-tz": "^3.2.0",
+		"next": "16.0.7",
 		"pg": "^8.16.3",
-		"react": "19.2.0",
-		"react-dom": "19.2.0"
+		"react": "19.2.1",
+		"react-dom": "19.2.1"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.3.7",
+		"@biomejs/biome": "2.3.7",
 		"@tailwindcss/postcss": "^4.1.17",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.7",
 		"@types/react-dom": "^19.2.3",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.2.7",
-		"prisma": "^7.0.0",
+		"prisma": "^7.1.0",
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3"
 	}
