feat: implement sidebar and header with localization and theme support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
 			}
 		],
 		"paths": {
-			"@/*": ["./*"]
+			"@/*": ["./*"],
+			"@/components/*": ["./app/components/*"]
 		}
 	},
 	"include": [
@@ -28,7 +29,8 @@
 		"**/*.tsx",
 		".next/types/**/*.ts",
 		".next/dev/types/**/*.ts",
-		"**/*.mts"
+		"**/*.mts",
+		"app/[lang]/dashboard/page.2tsx"
 	],
 	"exclude": ["node_modules"]
 }
