--- a/package.json
+++ b/package.json
@@ -25,13 +25,25 @@
 	"dependencies": {
 		"@prisma/adapter-pg": "^7.1.0",
 		"@prisma/client": "^7.1.0",
+		"@radix-ui/react-avatar": "^1.1.11",
+		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-slot": "^1.2.4",
 		"better-auth": "^1.4.5",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0",
+		"lucide-react": "^0.562.0",
 		"next": "16.0.7",
+		"next-intl": "^4.6.1",
+		"next-themes": "^0.4.6",
 		"pg": "^8.16.3",
 		"react": "19.2.1",
-		"react-dom": "19.2.1"
+		"react-dom": "19.2.1",
+		"recharts": "^3.6.0",
+		"tailwind-merge": "^3.4.0",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.7",
@@ -43,6 +55,7 @@
 		"lint-staged": "^16.2.7",
 		"prisma": "^7.1.0",
 		"tailwindcss": "^4.1.17",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3"
 	}
 }
