--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-slot": "^1.2.4",
+		"@tanstack/react-query": "^5.90.13",
+		"@tanstack/react-query-devtools": "^5.91.1",
 		"better-auth": "^1.4.5",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
