--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
+		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tanstack/react-query": "^5.90.13",
 		"@tanstack/react-query-devtools": "^5.91.1",
 		"better-auth": "^1.4.5",
