--- a/biome.json
+++ b/biome.json
@@ -5,7 +5,9 @@
 		"clientKind": "git",
 		"useIgnoreFile": true
 	},
-	"files": {},
+	"files": {
+		"includes": ["**", "!messages/en/dashboard.d.json.ts"]
+	},
 	"formatter": {},
 	"linter": {
 		"domains": {
