--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"next-themes": "^0.4.6",
 		"pg": "^8.16.3",
 		"react": "19.2.1",
+		"react-activity-calendar": "^3.0.5",
 		"react-dom": "19.2.1",
 		"recharts": "^3.6.0",
 		"tailwind-merge": "^3.4.0",
