--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"next-intl": "^4.6.1",
 		"next-themes": "^0.4.6",
 		"pg": "^8.16.3",
+		"radix-ui": "^1.4.3",
 		"react": "19.2.4",
 		"react-activity-calendar": "^3.0.5",
 		"react-dom": "19.2.4",
