--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		]
 	},
 	"dependencies": {
+		"@emailjs/browser": "^4.4.1",
 		"@prisma/adapter-pg": "^7.1.0",
 		"@prisma/client": "^7.1.0",
 		"@radix-ui/react-avatar": "^1.1.11",
