--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ SPOTIFY_CLIENT_ID="your spotify client id here"
 SPOTIFY_CLIENT_SECRET="your spotify client secret here"
 BETTER_AUTH_SECRET="your better auth secret here"
 BETTER_AUTH_URL="your better auth url here"
+NEXT_PUBLIC_HIDE_LOGIN="false"
