--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ SPOTIFY_CLIENT_SECRET="your spotify client secret here"
 BETTER_AUTH_SECRET="your better auth secret here"
 BETTER_AUTH_URL="your better auth url here"
 NEXT_PUBLIC_HIDE_LOGIN="false"
+CRON_SECRET="your cron secret here"
