--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev -H 127.0.0.1",
-		"build": "prisma generate && prisma migrate deploy && next build",
+		"build": "prisma generate && next build",
 		"start": "next start",
 		"lint": "biome lint .",
 		"lint:fix": "biome lint . --write",
 		"format": "biome format . --write",
 		"check:fix": "biome check . --write",
 		"db:migrate": "prisma migrate dev",
+		"db:migrate:deploy": "prisma migrate deploy",
 		"db:push": "prisma db push",
 		"db:studio": "prisma studio",
 		"postinstall": "prisma generate",
@@ -39,6 +40,7 @@
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0",
+		"dotenv": "^17.3.1",
 		"lucide-react": "^0.562.0",
 		"next": "16.1.6",
 		"next-intl": "^4.6.1",
