chore: add caddy reverse proxy and SERVER_IP env

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ BETTER_AUTH_SECRET="your better auth secret here"
 BETTER_AUTH_URL="your better auth url here"
 NEXT_PUBLIC_HIDE_LOGIN="false"
 CRON_SECRET="your cron secret here"
+SERVER_IP="your server ip here"
